added some features of form

--- a/src/app/components/nav/nav.component.html
+++ b/src/app/components/nav/nav.component.html
@@ -23,7 +23,14 @@
         </button>
       </li>
       <li class="text-gray-80 0">
-        <button class="px-2 border hover:text-gray-500">Settings</button>
+        <button
+          routerLink="/sign-up"
+          routerLinkActive="active"
+          ariaCurrentWhenActive="page"
+          class="px-2 border hover:text-gray-500"
+        >
+          Register
+        </button>
       </li>
       <li><button class="px-2 border hover:text-gray-500">Contact</button></li>
     </ul>
