--- a/src/app/components/cardList/cardList.component.html
+++ b/src/app/components/cardList/cardList.component.html
@@ -1,4 +1,4 @@
-<div class="flex max-w-7xl mx-auto justify-between items-center">
+<div class="flex max-w-7xl mx-auto min-h-screen justify-between items-center">
   <div class="max-w-sm rounded-lg overflow-hidden shadow-lg bg-white">
     <img
       class="h-48 object-cover"
