--- a/src/app/components/products/products.component.html
+++ b/src/app/components/products/products.component.html
@@ -1,1 +1,28 @@
-<div>Products</div>
+<div class="flex max-w-7xl min-h-screen mx-auto justify-between items-center">
+  <div
+    *ngFor="let user of users"
+    class="max-w-sm rounded-lg overflow-hidden shadow-lg bg-white"
+  >
+    <img
+      class="h-48 object-cover"
+      ngSrc="card-image.jpeg"
+      height="4500"
+      width="3000"
+    />
+
+    <div class="p-6">
+      <h2 class="text-xl font-bold mb-2">{{ user.name }}</h2>
+      <p
+        [ngClass]="user.name ? 'text-blue-700 text-sm mb-4' : 'text-yellow-400'"
+      >
+        {{ user.email }}
+      </p>
+      <p class="text-gray-700 text-sm mb-4">{{ user.age }}</p>
+      <button
+        class="bg-red-600 text-white px-4 py-2 rounded hover:bg-red-700 transition"
+      >
+        Button
+      </button>
+    </div>
+  </div>
+</div>
