--- a/src/app/components/nav/nav.component.html
+++ b/src/app/components/nav/nav.component.html
@@ -32,7 +32,26 @@
           Register
         </button>
       </li>
-      <li><button class="px-2 border hover:text-gray-500">Contact</button></li>
+      <li>
+        <button
+          routerLink="/dynamic-form"
+          routerLinkActive="active"
+          ariaCurrentWhenActive="page"
+          class="px-2 border hover:text-gray-500"
+        >
+          Dynamic form
+        </button>
+      </li>
+      <li>
+        <button
+          routerLink="/comments"
+          routerLinkActive="active"
+          ariaCurrentWhenActive="page"
+          class="px-2 border hover:text-gray-500"
+        >
+          Comments
+        </button>
+      </li>
     </ul>
   </nav>
 </main>
