--- a/src/app/components/nav/nav.component.html
+++ b/src/app/components/nav/nav.component.html
@@ -1,6 +1,10 @@
 <main class="py-1 shadow-lg">
   <nav class="flex max-w-7xl mx-auto justify-between px-4 py-3">
-    <h1 class="text-2xl font-black">Angular</h1>
+    <h1 class="text-2xl font-black">
+      <a routerLink="/" routerLinkActive="active" ariaCurrentWhenActive="page"
+        >Angular</a
+      >
+    </h1>
     <ul class="flex gap-1">
       <li class="text-gray-80 0">
         <button
